Receptionist almost done

--- a/OccupiedTable.resx
+++ b/OccupiedTable.resx
@@ -124,52 +124,11 @@
         d2luZy5Qb2ludEYCAAAAAXgBeQAACwsCAAAAAAAAPwAAAD8L
 </value>
   </data>
-  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
-  </metadata>
-  <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+  <data name="pnlCurrentBill.RadialGradientCenter" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
-        AAEAAAD/////AQAAAAAAAAAMAgAAAEZTeXN0ZW0uV2luZG93cy5Gb3JtcywgQ3VsdHVyZT1uZXV0cmFs
-        LCBQdWJsaWNLZXlUb2tlbj1iNzdhNWM1NjE5MzRlMDg5BQEAAAAmU3lzdGVtLldpbmRvd3MuRm9ybXMu
-        SW1hZ2VMaXN0U3RyZWFtZXIBAAAABERhdGEHAgIAAAAJAwAAAA8DAAAADAgAAAJNU0Z0AUkBTAMBAQAB
-        MAEAATABAAEQAQABEAEABP8BIQEACP8BQgFNATYHAAE2AwABKAMAAUADAAEQAwABAQEAASAGAAEQEgAB
-        EAEPAREB/wEQAQ8BEQH/ARABDwERAf8BEAEPAREB/wEQAQ8BEQH/ARABDwERAf8BEAEPAREB/wEQAQ8B
-        EQH/ARABDwERAf8BEAEPAREB/wEQAQ8BEQH/ARABDwERAf8BEAEPAREB/wEQAQ8BEQH/ARABDwERAf8B
-        EAEPAREB/8AAARABDwERAf8BEAEPAREB/wEQAQ8BEQH/ARABDwERAf8BEAEPAREB/wEQAQ8BEQH/ARAB
-        DwERAf8BEAEPAREB/wEQAQ8BEQH/ARABDwERAf8BEAEPAREB/wEQAQ8BEQH/ARABDwERAf8BEAEPAREB
-        /wEQAQ8BEQH/ARABDwERAf/AAAEQAQ8BEQH/ARABDwERAf8BEAEPAREB/wEQAQ8BEQH/ARABDwERAf8B
-        EAEPAREB/wEQAQ8BEQH/ARABDwERAf8BEAEPAREB/wEQAQ8BEQH/ARABDwERAf8BEAEPAREB/wEQAQ8B
-        EQH/ARABDwERAf8BEAEPAREB/wEQAQ8BEQH/wAABEAEPAREB/wEQAQ8BEQH/AQ0BDAEOAf8DZQH/ATsB
-        OgE7Af8BDQEMAQ0B/wEPAQ4BEAH/ARABDwERAf8BEAEPAREB/wEQAQ8BEQH/ARABDwERAf8BEAEPAREB
-        /wEQAQ8BEQH/ARABDwERAf8BEAEPAREB/wEQAQ8BEQH/wAABEAEPAREB/wEOAQ0BDwH/Ag0BDgH/A2IB
-        /wOYAf8DaQH/AzEB/wJOAU8B/wILAQwB/wMQAf8BDQEMAQ0B/wEQAQ8BEQH/ARABDwERAf8BEAEPAREB
-        /wEQAQ8BEQH/ARABDwERAf/AAAEQAQ8BEQH/AQ4BDQEdAf8BHwEeATQB/wKeAakB/wNxAf8DhgH/A54B
-        /wOeAf8DDQH/Aw8B/wMTAf8CGAEZAf8BHQEcAR0B/wEQAQ8BEQH/ARABDwERAf8BEAEPAREB/8AAARAB
-        DwERAf8CEQETAf8BGwIcAf8BaAFnAXEB/wE2ATUBSQH/AWwBcAF8Af8BWAFcAV8B/wPIAf8DDAH/A6gB
-        /wM2Af8DTwH/AlYBVwH/ARABDwERAf8BEAEPAREB/wEQAQ8BEQH/wAABEQEQARIB/wIgASEB/wF0AXYB
-        dwH/AXkBegF7Af8DhwH/A4IB/wFTAVYBWQH/AXcBfQGDAf8BUAFWAVsB/wFoAWwBbgH/AXUBdgF1Af8B
-        ogGjAaYB/wJ0AXkB/wEOAQ0BEQH/ARABDwERAf8BEAEPAREB/8AAARIBEQETAf8BOAE5AToB/wGxAbgB
-        vAH/Ac0B0gHVAf8DvQH/A8gB/wO5Af8DhQH/AZIBlAGOAf8BXQFpAVUB/wFFAVgBSQH/AYsBngGqAf8B
-        pQGrAb8B/wEkASUBMQH/Ag8BEgH/ARABDwERAf/AAAERARABEgH/AigBKgH/AXUBeQF8Af8BYgFlAWcB
-        /wIiASMB/wFxAXABcQH/A1sB/wGiAaMBoQH/AdAB2AHEAf8BhQGjAWMB/wFzAaABVAH/AZQB2gHpAf8B
-        UgFmAaMB/wEnASgBSAH/ARIBEwEaAf8BEAEPAREB/8AAARABDwERAf8BEgERARMB/wIWARcB/wEVARQB
-        FgH/AREBEAESAf8BEAEPAREB/wEPAQ4BEAH/AxQB/wFTAVoBSAH/AWQBfgFDAf8BVgF2AUgB/wGHAZoB
-        4wH/ATUBHQGzAf8BHgERAUkB/wERAQ8BGAH/ARABDwERAf/AAAEQAQ8BEQH/ARABDwERAf8BEAEPAREB
-        /wEQAQ8BEQH/ARABDwERAf8BEAEPAREB/wEQAQ8BEQH/ARABDwERAf8BFAEVAREB/wEgASUBFwH/ATMB
-        KwE7Af8BRAEfAXoB/wE4AREBawH/ARwBDwEuAf8BEQEPARQB/wEQAQ8BEQH/wAABEAEPAREB/wEQAQ8B
-        EQH/ARABDwERAf8BEAEPAREB/wEQAQ8BEQH/ARABDwERAf8BEAEPAREB/wEQAQ8BEQH/ARABDwERAf8B
-        EgERARIB/wEYARIBGwH/AR8BEAEnAf8BHAEPASMB/wETAQ8BFwH/ARABDwERAf8BEAEPAREB/8AAARAB
-        DwERAf8BEAEPAREB/wEQAQ8BEQH/ARABDwERAf8BEAEPAREB/wEQAQ8BEQH/ARABDwERAf8BEAEPAREB
-        /wEQAQ8BEQH/ARABDwERAf8BEAEPAREB/wERAQ8BEwH/AREBDwESAf8BEAEPAREB/wEQAQ8BEQH/ARAB
-        DwERAf/AAAEQAQ8BEQH/ARABDwERAf8BEAEPAREB/wEQAQ8BEQH/ARABDwERAf8BEAEPAREB/wEQAQ8B
-        EQH/ARABDwERAf8BEAEPAREB/wEQAQ8BEQH/ARABDwERAf8BEAEPAREB/wEQAQ8BEQH/ARABDwERAf8B
-        EAEPAREB/wEQAQ8BEQH/wAABEAEPAREB/wEQAQ8BEQH/ARABDwERAf8BEAEPAREB/wEQAQ8BEQH/ARAB
-        DwERAf8BEAEPAREB/wEQAQ8BEQH/ARABDwERAf8BEAEPAREB/wEQAQ8BEQH/ARABDwERAf8BEAEPAREB
-        /wEQAQ8BEQH/ARABDwERAf8BEAEPAREB/8AAAUIBTQE+BwABPgMAASgDAAFAAwABEAMAAQEBAAEBBQAB
-        gBcAA/+BAAs=
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFFTeXN0ZW0uRHJhd2luZywgVmVyc2lvbj00LjAuMC4wLCBDdWx0
+        dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWIwM2Y1ZjdmMTFkNTBhM2EFAQAAABVTeXN0ZW0uRHJh
+        d2luZy5Qb2ludEYCAAAAAXgBeQAACwsCAAAAAAAAPwAAAD8L
 </value>
   </data>
-  <metadata name="mySiticoneLicenseSettings1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>128, 17</value>
-  </metadata>
 </root>
